--- a/timer_pad_app/pubspec.yaml
+++ b/timer_pad_app/pubspec.yaml
@@ -34,8 +34,8 @@ dependencies:
     path: ../timer_pad_dependencies_module
   timer_pad_design_system:
     path: ../timer_pad_design_system
-  timer_pad_home_module:
-    path: ../timer_pad_home_module
+  timer_pad_task_module:
+    path: ../timer_pad_task_module
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
