--- a/timer_pad_core_module/pubspec.yaml
+++ b/timer_pad_core_module/pubspec.yaml
@@ -2,6 +2,7 @@ name: timer_pad_core_module
 description: A new Flutter package project.
 version: 0.0.1
 homepage:
+publish_to: none
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
